# seeed-esp32s3-cam

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.zh.md  partitions.csv  sdkconfig.defaults
.github/workflows/: release.yml
docs/: api.md  getting-started.md  troubleshooting.md
docs/api/: config.md  control.md  examples.md  stream.md
docs/en/: architecture.md  getting-started.md  hardware.md  led-status.md  troubleshooting.md  user-guide.md
docs/en/api/: config.md  control.md  examples.md  files.md  overview.md  status.md  stream.md  wifi.md
docs/zh/: architecture.md  getting-started.md  hardware.md  led-status.md  troubleshooting.md  user-guide.md
docs/zh/api/: config.md  control.md  examples.md  files.md  overview.md  status.md
main/: CMakeLists.txt  Kconfig.projbuild  cJSON.c  cJSON.h  camera_driver.c  camera_driver.h  config_manager.c  config_manager.h  ftp_client.c  ftp_client.h  idf_component.yml  main.c  mjpeg_streamer.c  mjpeg_streamer.h  nas_uploader.c  nas_uploader.h  status_led.c  status_led.h  storage_manager.c  storage_manager.h  time_sync.c  time_sync.h  video_recorder.c  video_recorder.h  web_server.c  web_server.h  webdav_client.c  webdav_client.h  wifi_manager.c  wifi_manager.h
main/web_ui/: config.html  files.html  index.html  preview.html
